[gd_scene load_steps=4 format=3 uid="uid://cngkm2whggxjj"]

[ext_resource type="Texture2D" uid="uid://bbaaywwlqjn85" path="res://assets/SpaceShip.png" id="1_l3rv8"]
[ext_resource type="Script" uid="uid://7pvtgmq6xi0j" path="res://ship.gd" id="2_4cq66"]
[ext_resource type="Texture2D" uid="uid://b3dxux11diiip" path="res://assets/fire.png" id="3_v4325"]

[node name="Ship" type="Sprite2D"]
texture = ExtResource("1_l3rv8")
script = ExtResource("2_4cq66")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LeftThruster" type="Sprite2D" parent="."]
position = Vector2(-34, 120)
texture = ExtResource("3_v4325")

[node name="RightThruster" type="Sprite2D" parent="."]
position = Vector2(35, 120)
texture = ExtResource("3_v4325")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
